<resources>
    <string name="app_name">Calculator</string>
    <string name="creator_string">By: Ervin</string>
    <string name="clear_history">clear history</string>
    <string name="test">Test</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="mass">Mass</string>
    <string name="area">Area</string>
    <string name="volume">Volume</string>
    <string name="speed">Speed</string>
    <string name="time">Time</string>
    <string name="data">Data</string>

    <string-array name="length" >
        <item> meter</item>
        <item> centimeter </item>
        <item> millimeters</item>
    </string-array>

    <string-array name="temperature" >
        <item> celsius</item>
        <item> fahrenheit </item>
    </string-array>
    
</resources>